@@ -1116,7 +1116,7 @@ void option_set_choice(option_t *opt, const char *name, const char *text,
         strlcpy(choice->text, text, 128);
 
     if (code && !startswith(code, "%% FoomaticRIPOptionSetting"))
-        unhtmlify(choice->command, 256, code);
+        unhtmlify(choice->command, 1024, code);
 }
 
 
