@@ -1,5 +1,14 @@
 2008-03-17 Lars Uebernickel <larsuebernickel@gmx.de>
 
+	* foomatic-rip.c, options.c: Fixed a bug in option parsing (some
+	  options were not read correctly).
+
+	  Let option settings for the "PageSetup" sections of the
+	  PostScript input file really be inserted in and not before the
+	  "PageSetup" sections.
+
+2008-03-17 Lars Uebernickel <larsuebernickel@gmx.de>
+
 	* postscript.c, options.c: New placeholder "&rbinumcopies;" which gets
 	replaced by the value set in the "%RBINumCopies: ..." or
 	"%%RBINumCopies: ..." line in the PostScript input. If the PostScript
